added more comments in index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <title>Site de Receitas</title>
     </head>
     <body>
+        <!-- MAIN -->
         <main>
             <h1>WAFFLE CLÁSSICO</h1>
             <figure>
@@ -28,6 +29,7 @@
                 <figcaption>Receita de waflle Clássico</figcaption>
             </figure>
             <article>
+                <!-- INGREDIENTS -->
                 <section class="ingredients">
                     <h2>INGREDIENTES</h2>
                     <div class="ingredients-list">
@@ -44,6 +46,7 @@
                         </ul>
                     </div>
                 </section>
+                <!-- PREPARATION -->
                 <section class="preparation">
                     <h2>MODO DE PREPARO</h2>
                     <div class="preparation-list">
@@ -56,12 +59,14 @@
                         </ol>
                     </div>
                 </section>
+                <!-- ADD INFORMATIONS -->
                 <section class="add-informations">
                     <h2>INFORMAÇÕES ADICIONAIS</h2>
                     <p>Você poderá servir esses Waffles no café da manhã com geleia</p>
                 </section>
             </article>
         </main>
+        <!-- FOOTER -->
         <footer>
             <p>Desafio criado por <cite><a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a></cite>. <br> Feito por <strong>Gabriel Mendes</strong> e <strong>Miguel Santos</strong>.</p>
         </footer>
